--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "kamisama/php-resque-ex-scheduler",
+	"name": "iglocska/php-resque-ex-scheduler",
 	"type": "library",
-	"description": "php-resque-ex-scheduler is a PHP port of resque-scheduler, which adds support for scheduling jobs to PHP-Resque.",
+	"description": "php-resque-ex-scheduler is a PHP port of resque-scheduler, which adds support for scheduling jobs to PHP-Resque. Fork of Kamisama's repo for MISP.",
 	"keywords": ["job", "background", "redis", "resque", "queue", "php", "schedule", "cron"],
 	"homepage": "http://www.github.com/kamisama/php-resque-ex-scheduler/",
 	"license": "MIT",
