--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "library",
 	"description": "php-resque-ex-scheduler is a PHP port of resque-scheduler, which adds support for scheduling jobs to PHP-Resque. Fork of Kamisama's repo for MISP.",
 	"keywords": ["job", "background", "redis", "resque", "queue", "php", "schedule", "cron"],
-	"homepage": "http://www.github.com/kamisama/php-resque-ex-scheduler/",
+	"homepage": "http://www.github.com/iglocska/php-resque-ex-scheduler/",
 	"license": "MIT",
 	"authors": [
 		{
@@ -26,6 +26,6 @@
 		"source": "https://github.com/kamisama/php-resque-ex-scheduler"
 	},
 	"require": {
-		"kamisama/php-resque-ex": ">=1.2.1"
+		"iglocska/php-resque-ex": ">=1.2.1"
 	}
 }
